# sapr

./: .gitignore  README.md
assignment2/: .gitignore  Makefile  README.md  compare_training.py  custom_hmm.py  debugging.py  decode.py  decoder.py  eval.py  eval_hmm.py  hmm.py  hmm_evaluation.py  hmm_fb.py  hmmlearn_hmm.py  hmmlearn_implementation.py  hmmlearn_model.py  initialise_hmm.py  mfcc_extract.py  nologmethod.py  pyproject.toml  test_custom_hmm.py  test_results.txt  train.py  train_hmm.py  training_hmm.py  training_nologmethod.py  training_results.txt  visualize.py
assignment2/figures/: 0epochs_hmmlearn_confusion_matrix_dev_set.csv  0epochs_hmmlearn_confusion_matrix_eval_set.csv  10epochs_hmmlearn_confusion_matrix_dev_set.csv  15epochs_hmmlearn_confusion_matrix_eval_set.csv  1epochs_hmmlearn_confusion_matrix_dev_set.csv  1epochs_hmmlearn_confusion_matrix_eval_set.csv  2epochs_hmmlearn_confusion_matrix_dev_set.csv  2epochs_hmmlearn_confusion_matrix_eval_set.csv  3epochs_hmmlearn_confusion_matrix_dev_set.csv  3epochs_hmmlearn_confusion_matrix_eval_set.csv  4epochs_hmmlearn_confusion_matrix_dev_set.csv  4epochs_hmmlearn_confusion_matrix_eval_set.csv  5epochs_hmmlearn_confusion_matrix_dev_set.csv
assignment2/pytest_results/: forward_backward_results.txt  initialization_results.txt  mfcc_extract_results.txt
assignment2/tests/: test_decode.py  test_emissions.py  test_forward_backward.py  test_foward_backward.py  test_initialization.py  test_mfcc_extract.py  test_training.py
assignment2/trained_models/: 1e23training_metrics.csv  1e24training_metrics.csv  (+26 more)
(+44 files in other folders)
