[tool.poetry]
name = "assignment2"
version = "0.1.0"
description = "isolated word recognition"
authors = ["frankcholula <lu.phrank@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.4"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
pytest = "^8.3.3"
hmmlearn = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
pythonpath = [
  ".", "assignment2"
]